tests/ui/diagnostic_namespace/multiline_format.stderr
error: there is no parameter `unknown` on trait `MultiLine`
  --> $DIR/multiline_format.rs:7:43
   |
LL | ...                   {unknown}")]
   |                        ^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument
note: the lint level is defined here
  --> $DIR/multiline_format.rs:2:9
   |
LL | #![deny(unknown_or_malformed_diagnostic_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: there is no parameter `unknown` on trait `MultiLine2`
  --> $DIR/multiline_format.rs:12:60
   |
LL | ...                   multiline string {unknown}")]
   |                                         ^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

error: there is no parameter `unknown` on trait `MultiLine3`
  --> $DIR/multiline_format.rs:17:23
   |
LL |     multiline string {unknown}")]
   |                       ^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

error: there is no parameter `unknown` on trait `MultiLine4`
  --> $DIR/multiline_format.rs:27:23
   |
LL |     multiline string {unknown}")]
   |                       ^^^^^^^
   |
   = help: expect either a generic argument name or `{Self}` as format argument

error: invalid format specifier
  --> $DIR/multiline_format.rs:33:42
   |
LL | ...                   {Self:+}")]
   |                       ^^^^^^^^
   |
   = help: no format specifier are supported in this position

error: invalid format specifier
  --> $DIR/multiline_format.rs:38:59
   |
LL | ...                   multiline string {Self:X}")]
   |                                        ^^^^^^^^
   |
   = help: no format specifier are supported in this position

error: invalid format specifier
  --> $DIR/multiline_format.rs:43:22
   |
LL |     multiline string {Self:#}")]
   |                      ^^^^^^^^
   |
   = help: no format specifier are supported in this position

error: invalid format specifier
  --> $DIR/multiline_format.rs:53:22
   |
LL |     multiline string {Self:?}")]
   |                      ^^^^^^^^
   |
   = help: no format specifier are supported in this position

error: aborting due to 8 previous errors

